correction de l'alignement texte principal, h1, h2 et Ressources

--- a/main_styles.css
+++ b/main_styles.css
@@ -27,7 +27,7 @@ img{
 h1 {
   font-family: var(--font-title);
   font-size: var(--size-title);
-  text-align: left; 
+  text-align: left;
 }
 
 /*permet d'envoyer cet élément dans le titre courant*/
@@ -48,12 +48,12 @@ ul li{
 }
 
 ul > li > ul {
-	padding-left: 3mm; 
+	padding-left: 3mm;
 }
 
 ul > li > ul > li::before{
 	content: "+";
-	margin-left: -3mm; 
+	margin-left: -3mm;
 	margin-right: 1mm;
 }
 
@@ -70,14 +70,14 @@ u{
   /*numéro de page*/
   @bottom-right-corner {
    content: counter(page);
-   font-size: 9pt; 
+   font-size: 9pt;
    font-weight: bold;
  	}
 
  	/*titre courant*/
  	@bottom-left {
  		content: string(title) ' -> ' string(subtitle);
-    font-size: 9pt; 
+    font-size: 9pt;
    	font-weight: bold;
   }
 }
@@ -135,9 +135,9 @@ u{
 }
 
 /* titres dans le texte */
-.contents-container h1, 
-.contents-container h2, 
-.contents-container h3, 
+.contents-container h1,
+.contents-container h2,
+.contents-container h3,
 .contents-container h4{
 	font-size: 11pt;
 	page-break-after: avoid;
@@ -145,7 +145,8 @@ u{
 
 .contents-container h1{
 	font-size: 18pt;
-	margin-top: 0;
+	margin-top: -6.75pt;
+	margin-bottom: 12pt;
 }
 
 .contents-container h1::before{
@@ -154,8 +155,8 @@ u{
 }
 
 .contents-container h2{
-	margin-top: 1cm;
-	margin-bottom: 0cm;
+	margin-top: 0.01cm;
+	margin-bottom: 0px;
 }
 
 .contents-container h2::before{
@@ -165,7 +166,7 @@ u{
 }
 
 .content-p +  h2, .content-atomic-container + h2, .content-ul + h2{
-	margin-top: 1.2cm;
+	margin-top: 1.44cm;
 }
 
 .contents-container h1 + .content-p{
@@ -173,12 +174,13 @@ u{
 }
 
 .contents-container h2 + .content-p{
-	margin-top: 0mm;
+	margin-top: 13.5pt;
 }
 
 /* marge sur les paragraphes */
 .content-p {
-	margin: 5mm 0;
+	margin: 13.5pt 0;
+	line-height: 13.5pt;
 }
 
 /* ------------ FIN GÉNÉRAL ------------  */
@@ -222,7 +224,7 @@ figure{
 }
 
 figcaption,
-.contents-container figcaption, 
+.contents-container figcaption,
 .contents-container figcaption p{
 	font-family: var(--font-text);
 	font-size: 7pt;
@@ -236,7 +238,7 @@ figcaption,
 	flex-wrap: wrap;
 	justify-content: center;
 	page-break-before: always;
-	page-break-after: always; 
+	page-break-after: always;
 	width: 140%;
 	margin-left: -40%;
 }
@@ -257,7 +259,7 @@ figcaption,
 
 /* ----------- TRAME PLUS --------------- */
 .plus{
-	position: absolute; 
+	position: absolute;
 }
 
 /* -----------  TITRE COURANT ----------- */
@@ -277,19 +279,21 @@ figcaption,
 	line-height: 1.45;
 	font-size: 7pt;
 	text-align: left;
-	margin-top: -3mm;
+	margin-top: -3.7mm;
 }
 
 .footnote-ref{
 	text-decoration: none;
-	pointer-events: none; 
+	pointer-events: none;
 }
 
 .footnote-ref sup{
 	font-size: 7pt;
-	pointer-events: none; 
+	pointer-events: none;
 	margin-left: 2px;
-	
+	vertical-align: top;
+	position: relative;
+	top:-4px;
 }
 
 .note-call_footnote-p{
@@ -312,8 +316,14 @@ figcaption,
 	width: 140%;
 	margin-left: -40%;
 	padding: 0;
+	line-height: 13.5pt;
 }
-
+.ressources li:first-child{
+	margin-top: 0;
+}
+.ressources li{
+	margin:13.5pt 0;
+}
 
 /* ----------- INTERPAGES --------------- */
 /* page avant de commencer un article*/
@@ -346,7 +356,7 @@ figcaption,
 
 /* Mise en page du sommaire des thématiques*/
 .tableofcontents-block-title{
-	font-size: 18pt; 
+	font-size: 18pt;
 	font-weight: 500;
 	color: #FFF;
 	width: 100%;
@@ -371,7 +381,3 @@ figcaption,
 .tableofcontents-block-title li::before{
 	content:' + ';
 }
-
-
-
-
